--- a/styles/MeterStick.module.css
+++ b/styles/MeterStick.module.css
@@ -47,5 +47,17 @@
   color: var(--brown-900);
   font: 700 2em/2 ubuntu mono, consolas, monaco, monospace;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: .75em;
+}
+
+@media screen and (min-width: 800px) {
+  .stickValue {
+    position: absolute;
+    bottom: 0;
+    transform: translateX(-50%);
+    color: var(--brown-900);
+    font: 700 2em/2 ubuntu mono, consolas, monaco, monospace;
+    font-weight: bold;
+    font-size: 1.2em;
+  }
 }
