--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,4 +3,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+@media screen and (min-width: 800px) {
+  .navbar {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
