--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,18 @@ body {
   height: 100%;
 }
 
+.table {
+  width: 80%;
+  margin: auto;
+  border-collapse: collapse;
+}
+
+table, td, th {
+  text-align: left;
+}
+
+
+
 .content {
   margin-left: auto;
   margin-right: auto;
