--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ code {
 :root {
   --white: rgb(255, 255, 255);
   --grey-100: rgb(245, 245, 245);
+  --grey-200:  rgb(229, 229, 229);
   --brown-100: #edc070;
   --brown-900: #825723;
   --ff-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
