--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
+:root {
+  --white: rgb(255, 255, 255);
+  --grey-100: rgb(245, 245, 245);
+  --grey-200: rgb(229, 229, 229);
+  --brown-100: #edc070;
+  --brown-900: #825723;
+  --ff-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  --blue: #1967d2;
+  --yellow: rgb(255, 204, 0);
+  --radius: 0.375rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,20 +24,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-:root {
-  --white: rgb(255, 255, 255);
-  --grey-100: rgb(245, 245, 245);
-  --grey-200:  rgb(229, 229, 229);
-  --brown-100: #edc070;
-  --brown-900: #825723;
-  --ff-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
-  --blue: #1967d2;
-  --yellow: rgb(255, 204, 0);
-  --radius: 0.375rem;
 }
 
 html {
@@ -42,9 +42,7 @@ body {
   height: 100%;
 }
 
-#__next {
-  height: 100%;
-}
+
 
 .table {
   width: 80%;
@@ -52,11 +50,11 @@ body {
   border-collapse: collapse;
 }
 
-table, td, th {
+table,
+td,
+th {
   text-align: left;
 }
-
-
 
 .content {
   margin-left: auto;
@@ -74,7 +72,6 @@ table, td, th {
   line-height: 30px;
   background-color: var(--white);
   padding: 1rem;
-
 }
 
 @media screen and (min-width: 800px) {
